[build-system]
requires = [
  "setuptools>=65.0",
  "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "LogicFuzz"
version = "0.1.0"
description = "Advanced Logic-based Fuzz Harness Generation with AI Agents."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
"anthropic==0.31.2",
"chardet==5.2.0",
"cxxfilt==0.3.0",
"GitPython==3.1.43",
"google-api-python-client==2.143.0",
"google-cloud-aiplatform==1.64.0",
"google-cloud-storage==2.9.0",
"google-cloud-logging==3.11.2",
"Jinja2==3.1.5",
"openai==1.84.0",
"pandas==2.2.2",
"pylint==3.2.5",
"pyright==1.1.345",
"PyYAML==6.0.1",
"requests==2.32.4",
"rust-demangler==1.0",
"tiktoken==0.9.0",
"yapf==0.40.1",
"fuzz-introspector==0.1.10"
]

[tool.setuptools]
py-modules = [
  "run_logicfuzz",
  "run_single_fuzz",
  "pipeline",
  "stage.base_stage",
  "stage.execution_stage",
  "stage.writing_stage",
  "stage.analysis_stage",
  "llm_toolkit.crash_triager",
  "llm_toolkit.code_fixer",
  "llm_toolkit.models",
  "llm_toolkit.prompt_builder",
  "llm_toolkit.prompts",
  "llm_toolkit.corpus_generator",
  "llm_toolkit.output_parser",
  "data_prep.project_context.context_introspector",
  "data_prep.project_src",
  "data_prep.project_targets",
  "data_prep.introspector",
  "data_prep.target_collector",
  "utils",
  "tool.base_tool",
  "tool.container_tool",
  "tool.gbucket_tool",
  "tool.gdb_tool",
  "tool.bash_tool",
  "tool.fuzz_introspector_tool",
  "experiment.fuzz_target_error",
  "experiment.oss_fuzz_checkout",
  "experiment.builder_runner",
  "experiment.workdir",
  "experiment.evaluator",
  "experiment.benchmark",
  "experiment.textcov",
  "agent.coverage_analyzer",
  "agent.prototyper",
  "agent.semantic_analyzer",
  "agent.base_agent",
  "agent.enhancer",
  "agent.analyzer",
  "agent.crash_analyzer",
  "agent.one_prompt_enhancer",
  "agent.one_prompt_prototyper",
  "experimental.build_generator.manager",
  "experimental.build_generator.build_script_generator",
  "experimental.build_generator.runner",
  "experimental.build_generator.result_merger",
  "experimental.build_generator.constants",
  "experimental.build_generator.templates",
  "experimental.build_fixer.build_fix",
  "experimental.build_fixer.templates",
  "experimental.end_to_end.cli",
  "experimental.from_scratch.generate",
  "experimental.manual.oss_fuzz_vuln_prompt",
  "experimental.manual.prompter",
  "results",
  "logger",
  "agent_graph.main",
  "agent_graph.state",
  "agent_graph.workflow",
  "agent_graph.workdir",
  "agent_graph.benchmark",
  "agent_graph.benchmark_loader",
  "agent_graph.common_args",
  "agent_graph.adapters",
  "agent_graph.logger",
  "agent_graph.agents.base_agent",
  "agent_graph.agents.crash_analyzer",
  "agent_graph.agents.enhancer",
  "agent_graph.agents.function_analyzer",
  "agent_graph.agents.prototyper",
  "agent_graph.nodes.crash_analyzer_node",
  "agent_graph.nodes.enhancer_node",
  "agent_graph.nodes.execution_node",
  "agent_graph.nodes.function_analyzer_node",
  "agent_graph.nodes.prototyper_node",
  "agent_graph.nodes.supervisor_node",
  "report.aggregate_coverage_diff",
  "report.common",
  "report.compare_results",
  "report.docker_run",
  "report.export",
  "report.parse_logs",
  "report.web",
  "report.trends_report.update_index",
  "report.trends_report.update_web",
  "report.trends_report.upload_summary"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.txt"]

[project.scripts]
logicfuzz = "run_logicfuzz:main"
logicfuzz-agent = "agent_graph.main:main"
fuzz-generator = "experimental.from_scratch.generate:main"
oss-fuzz-generator = "experimental.end_to_end.cli:main"
